<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_dashboard"
        android:enabled="true"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_payment"
        android:enabled="true"
        android:icon="@drawable/ic_payment_black_24dp"
        android:title="@string/title_payment"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_delivery"
        android:enabled="true"
        android:icon="@drawable/ic_motorcycle_black_24dp"
        android:title="@string/title_delivery"
        app:showAsAction="ifRoom" />

</menu>
